@@ -1,3 +1,11 @@
+Feb 25 2016 - chris ---------------------------------------------------
+o Added ups_at_exit cleanup function to release statically allocated
+	resources
+
+Feb 23 2016 - chris ---------------------------------------------------
+o Replaced (old) UQI functions with uqi_select and uqi_select_range, and a
+	SQL-ish query function
+
 Feb 06 2016 - chris ---------------------------------------------------
                       release of upscaledb-2.1.13
 
